[gd_scene load_steps=38 format=3 uid="uid://ctknsnh5k117"]

[ext_resource type="Script" uid="uid://o2853gabt13v" path="res://entities/dino/dino.gd" id="1_sursh"]
[ext_resource type="Texture2D" uid="uid://kc72osno8f0o" path="res://entities/dino/DinoSprites - vita.png" id="2_fdobs"]
[ext_resource type="PackedScene" uid="uid://bxkdql6xam1qp" path="res://utils/State Machine.tscn" id="3_2dk2g"]
[ext_resource type="Script" uid="uid://cmx2jo5xe1lbk" path="res://entities/dino/idle_state.gd" id="6_mumxh"]
[ext_resource type="Script" uid="uid://bodgqlkdn0yo6" path="res://entities/dino/conjuration_state.gd" id="7_a3ear"]
[ext_resource type="Script" uid="uid://b0x35qumsf8br" path="res://entities/dino/moving_state.gd" id="8_36pu7"]
[ext_resource type="PackedScene" uid="uid://4winow2ll5rt" path="res://components/Conjuring_Fx_Component.tscn" id="8_f4shx"]
[ext_resource type="Script" uid="uid://yip08qddy8im" path="res://entities/dino/casting_state.gd" id="9_qs8ym"]
[ext_resource type="Script" uid="uid://dqdjhfn554br6" path="res://entities/dino/casting_fx_component.gd" id="10_7ck62"]
[ext_resource type="Script" uid="uid://byfropucg81b7" path="res://utils/spell_manager.gd" id="10_j720b"]
[ext_resource type="Texture2D" uid="uid://2qbgi5iim81c" path="res://effects/blank.png" id="11_j720b"]
[ext_resource type="Texture2D" uid="uid://4hhfyvoquajm" path="res://effects/magic_circle.png" id="12_larsl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0xm2m"]
atlas = ExtResource("2_fdobs")
region = Rect2(240, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("2_fdobs")
region = Rect2(264, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("2_fdobs")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("2_fdobs")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("2_fdobs")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("2_fdobs")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg77c"]
atlas = ExtResource("2_fdobs")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2yge"]
atlas = ExtResource("2_fdobs")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvp3"]
atlas = ExtResource("2_fdobs")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_lquwl"]
atlas = ExtResource("2_fdobs")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("2_fdobs")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdy4"]
atlas = ExtResource("2_fdobs")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48qg"]
atlas = ExtResource("2_fdobs")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vivmo"]
atlas = ExtResource("2_fdobs")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cqfq"]
atlas = ExtResource("2_fdobs")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaehf"]
atlas = ExtResource("2_fdobs")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_074og"]
atlas = ExtResource("2_fdobs")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cegan"]
atlas = ExtResource("2_fdobs")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_82xsv"]
atlas = ExtResource("2_fdobs")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_getpj"]
atlas = ExtResource("2_fdobs")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ryguw"]
atlas = ExtResource("2_fdobs")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d13ii"]
atlas = ExtResource("2_fdobs")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u8w0"]
atlas = ExtResource("2_fdobs")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_272bh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xm2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}],
"loop": true,
"name": &"conjuring",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg77c")
}],
"loop": true,
"name": &"damage",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2yge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bvp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lquwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2yge")
}],
"loop": true,
"name": &"reset",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vivmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cqfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaehf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_074og")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cegan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82xsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_getpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ryguw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d13ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u8w0")
}],
"loop": true,
"name": &"walk",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sursh"]
radius = 2.85714
height = 10.1501

[node name="Dino" type="CharacterBody2D" groups=["Player"]]
z_index = 1
y_sort_enabled = true
scale = Vector2(1.75, 1.75)
collision_layer = 256
collision_mask = 1031
script = ExtResource("1_sursh")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = 1
sprite_frames = SubResource("SpriteFrames_272bh")
animation = &"conjuring"
frame_progress = 0.0578601
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-0.753717, -1.92706)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_sursh")

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("3_2dk2g")]
initial_state = NodePath("IdleState")

[node name="MovingState" type="Node" parent="StateMachine"]
script = ExtResource("8_36pu7")
metadata/_custom_type_script = "uid://skt61k8p0nqa"

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("6_mumxh")
metadata/_custom_type_script = "uid://skt61k8p0nqa"

[node name="ConjurationState" type="Node" parent="StateMachine"]
script = ExtResource("7_a3ear")

[node name="CastingState" type="Node" parent="StateMachine"]
script = ExtResource("9_qs8ym")
metadata/_custom_type_script = "uid://skt61k8p0nqa"

[node name="SpellManager" type="Node" parent="."]
script = ExtResource("10_j720b")

[node name="ConjuringFxComponent" parent="." instance=ExtResource("8_f4shx")]
z_index = 1
position = Vector2(-0.583523, -4.01173)

[node name="ConcentrationMeter" type="Control" parent="."]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -21.0
offset_right = 7.0
offset_bottom = -19.0

[node name="ColorRect" type="ColorRect" parent="ConcentrationMeter"]
layout_mode = 0
offset_right = 15.0
offset_bottom = 2.0
color = Color(0.960784, 0.780392, 0.00784314, 1)

[node name="CastingFxComponent" type="Node2D" parent="."]
visible = false
z_index = 1
y_sort_enabled = true
position = Vector2(0, -10)
script = ExtResource("10_7ck62")

[node name="SquishMe" type="Sprite2D" parent="CastingFxComponent"]
scale = Vector2(0.189082, 0.0693218)
texture = ExtResource("11_j720b")

[node name="RotateMe" type="Sprite2D" parent="CastingFxComponent/SquishMe"]
position = Vector2(0, 153)
texture = ExtResource("12_larsl")
offset = Vector2(5, -4)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="TextBox" type="LineEdit" parent="Camera2D"]
z_index = 2
offset_left = -154.525
offset_top = 93.8334
offset_right = 45.4755
offset_bottom = 124.833
scale = Vector2(0.6, 0.6)
editable = false
